# Engine

./: CMakeLists.txt  Engine.sln  Engine.vcxproj  Engine.vcxproj.filters  README.md
res/glsl/: first.frag  first.vert
src/: gl.h  main.cpp
src/GL/: Program.cpp  Program.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h
src/GLFW/: GLFW.cpp  GLFW.h  Window.cpp  Window.h
src/Util/: Image.cpp  Image.h
